applications/sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: sample-app
spec:
  selector:
    app: nginx-demo
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
